--- a/animperium/animperium.CSharp.csproj
+++ b/animperium/animperium.CSharp.csproj
@@ -58,14 +58,14 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Networking">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
-      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions.Common">
-      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -89,6 +89,8 @@
     <Compile Include="Assets\Scripts\Map\MapLoadData.cs" />
     <Compile Include="Assets\Scripts\Map\MapLoader.cs" />
     <Compile Include="Assets\Scripts\Map\TileInfo.cs" />
+    <Compile Include="Assets\Scripts\Map\UndergroundManager.cs" />
+    <Compile Include="Assets\Scripts\Map\UndergroundTile.cs" />
     <Compile Include="Assets\Scripts\Networking\GameClient.cs" />
     <Compile Include="Assets\Scripts\Networking\GameServer.cs" />
     <Compile Include="Assets\Scripts\Networking\NetworkData.cs" />
